--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: windows-2019
+    runs-on: windows-2022
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -71,12 +71,12 @@ jobs:
         shell: cmd
         run: call .\InstallerBumpVersion.bat
 
-      # Build MSI installer project
+      # Build MSI installer project using Visual Studio 2022
       - name: Build Installer MSI
         if: env.build_trigger == 'true'
         shell: cmd
         run: |
-          msbuild UnityLauncherProInstaller\UnityLauncherProInstaller.vdproj /p:Configuration=Release
+          "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\devenv.com" UnityLauncherPro.sln /Build Release
 
       # Get the current date and time
       - name: Get current date and time
