--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,8 @@ jobs:
         if: env.build_trigger == 'true'
         shell: cmd
         run: |
-          "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\devenv.com" UnityLauncherPro.sln /Build Release
+          "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\devenv.com" UnityLauncherProInstaller\UnityLauncherProInstaller.vdproj /Build Release
+
 
       # Get the current date and time
       - name: Get current date and time
