Update main.yml #GITBUILD almost

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -116,11 +116,13 @@ jobs:
           echo === Running BuildInstaller.bat ===
           call .\BuildInstaller.bat || echo WARNING: BuildInstaller.bat exited with %ERRORLEVEL%, continuing...
           echo === Verifying MSI ===
-          if not exist "UnityLauncherProInstaller\Release\UnityLauncherPro-Installer.msi" (
+          if exist "UnityLauncherProInstaller\Release\UnityLauncherPro-Installer.msi" (
+            echo Success: MSI found at UnityLauncherProInstaller\Release\UnityLauncherPro-Installer.msi
+            exit /b 0
+          ) else (
             echo ERROR: MSI not found in UnityLauncherProInstaller\Release
             exit /b 1
           )
-          echo Success: MSI found at UnityLauncherProInstaller\Release\UnityLauncherPro-Installer.msi
 
       # Get the current date and time
       - name: Get current date and time
