--- a/UnityLauncherPro/UnityLauncherPro.csproj
+++ b/UnityLauncherPro/UnityLauncherPro.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{EC78D91A-3E63-4CAA-8BC3-9673A30FDA45}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>UnityLauncherPro</RootNamespace>
-    <AssemblyName>ULauncherPro</AssemblyName>
+    <AssemblyName>UnityLauncherPro</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
